<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InvestmentManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 资产管理 -->
    <string name="actionbar_invest_manager">我的投资管理</string>
    <string name="label_account_news">账户动态</string>
    <string name="label_account_manager">账户管理</string>
    <string name="label_account_rank">账户排行</string>
    <string name="label_account_bounce">账户总收益</string>
    <string name="label_week_bounce">周收益</string>
    <string name="label_month_bounce">月收益</string>
    <string name="label_all_bounce">总收益</string>
    <string name="label_invest_bounce_rate">投资标的收益率</string>
    
    
    <!-- 智能投资工具 -->
    <string name="label_buy_in">买入</string>
    <string name="label_Financing_buy_in">融资买入</string>
    <string name="label_sale_out">卖出</string>
    <string name="label_balance_sheet">资产负债表</string>
    
    <string name="label_chi_cang_query">持仓查询</string>
    <string name="label_weituo_query">委托查询</string>
    <string name="label_chengjiao_query">成交查询</string>
    <string name="label_bat_buy_in">批量买入</string>
    
    <!-- 聚贤论坛 -->
    <string name="juxianlutan_name">聚贤论坛</string>
    <string name="label_today">今日</string>
    <string name="label_yesterday">昨日</string>
    <string name="label_posts">帖子</string>
    <string name="label_forum_classify">论坛分类</string>
    <string name="label_forum_hotspot">论坛热点</string>
    <string name="label_forum_module1">基金论坛</string>
    <string name="label_forum_module2">基金论坛</string>
    <string name="label_forum_module3">论坛板块</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
</resources>
