<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/juxianfang_forum_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
		
    <LinearLayout 
        android:id="@+id/juxianfang_forum_content_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">  
        
        <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:gravity="center"
				    android:orientation="vertical"
				    android:paddingBottom="20dp"
				    android:paddingTop="20dp">
				    <com.opensource.librarys.circleimageview.CircleImageView
						     xmlns:app="http://schemas.android.com/apk/res-auto"
						     android:id="@+id/juxianfang_forum_header_portrait"
						     android:layout_width="70dp"
						     android:layout_height="70dp"
						     android:src="@drawable/ic_launcher"
						     app:border_color="#68c1d3"
						     app:border_width="2dp" />
				    <LinearLayout 
				        android:layout_width="210dp"
        				android:layout_height="wrap_content"
        				android:layout_below="@id/juxianfang_forum_header_portrait"
        				android:orientation="horizontal">
        				<LinearLayout 
						        android:layout_width="0dp"
		        				android:layout_height="wrap_content"
		        				android:layout_weight="1"
		        				android:orientation="vertical">
		        				<TextView 
						            android:layout_width="match_parent"
		        						android:layout_height="match_parent"
		        						android:text="@string/label_today"/>
		        				<TextView 
						            android:layout_width="match_parent"
		        						android:layout_height="match_parent"
		        						android:text="2323"/>
		        		</LinearLayout>
		        		<LinearLayout 
						        android:layout_width="1dp"
		        				android:layout_height="wrap_content"
		        				android:paddingLeft="5dp"
		        				android:paddingRight="5dp"
		        				android:background="@android:color/darker_gray"/>
				        <LinearLayout 
						        android:layout_width="0dp"
		        				android:layout_height="wrap_content"
		        				android:layout_weight="1"
		        				android:orientation="vertical">
		        				<TextView 
						            android:layout_width="match_parent"
		        						android:layout_height="match_parent"
		        						android:text="@string/label_yesterday"/>
		        				<TextView 
						            android:layout_width="match_parent"
		        						android:layout_height="match_parent"
		        						android:text="2342"/>
		        		</LinearLayout>
		        		<LinearLayout 
						        android:layout_width="1dp"
		        				android:layout_height="wrap_content"
		        				android:paddingLeft="5dp"
		        				android:paddingRight="5dp"
		        				android:background="@android:color/darker_gray"/>
		        		<LinearLayout 
						        android:layout_width="0dp"
		        				android:layout_height="wrap_content"
		        				android:layout_weight="1"
		        				android:orientation="vertical">
		        				<TextView 
						            android:layout_width="match_parent"
		        						android:layout_height="match_parent"
		        						android:text="@string/label_posts"/>
		        				<TextView 
						            android:layout_width="match_parent"
		        						android:layout_height="match_parent"
		        						android:text="4524523"/>
		        		</LinearLayout>
				    </LinearLayout>
     		</LinearLayout>
        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:orientation="horizontal"	
		        android:background="@color/white"	            
		        android:showDividers="middle">
		        
		        <TextView 
		            android:id="@+id/forum_nav_classify"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:textSize="14sp"
		            android:text="@string/label_forum_classify"
		            android:gravity="center"
		            android:clickable="true"
		            android:onClick="showPerformance"/>
		        
		        <TextView 
		            android:id="@+id/forum_nav_hotspot"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:textSize="14sp"
		            android:gravity="center"
		            android:clickable="true"
		            android:text="@string/label_forum_hotspot"
		            android:onClick="showFundOverview"/>
		        
		        <TextView 
		            android:id="@+id/forum_nav_module1"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:textSize="14sp"
		            android:gravity="center"
		            android:clickable="true"
		            android:text="@string/label_forum_module1"
		            android:onClick="showFundForum"/>
		        
		        <TextView 
		            android:id="@+id/forum_nav_module2"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:textSize="14sp"
		            android:gravity="center"
		            android:clickable="true"
		            android:text="@string/label_forum_module2"
		            android:onClick="showCompanyOverview"/>
		        
		        <TextView 
		            android:id="@+id/forum_nav_module3"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:textSize="14sp"
		            android:gravity="center"
		            android:clickable="true"
		            android:text="@string/label_forum_module3"
		            android:onClick="showCompanyOverview"/>
		        
		        <ImageView 
			          android:layout_width="50dp"
			          android:layout_height="50dp"
			          android:gravity="center"
			          android:src="@drawable/ic_launcher"/>
		    </LinearLayout>
    </LinearLayout>
		     
    <LinearLayout
    		android:id="@+id/juxianfang_forum_nav_layout"
     		android:layout_width="300dp"
     		android:layout_height="match_parent"
     		android:layout_gravity="end"
     		android:choiceMode="singleChoice"
     		android:divider="@android:color/transparent"
     		android:focusable="true" 
   			android:focusableInTouchMode="true"
     		android:dividerHeight="0dp"
     		android:orientation="vertical"
     		android:background="#FFFFFF"> 
         
     		
     		
		</LinearLayout>

    
</android.support.v4.widget.DrawerLayout>
