<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


    <com.app.client.investment.views.TabRadioGroup
        android:id="@+id/tabArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbAccountNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_account_news" />

        <RadioButton
            android:id="@+id/rbAccountManager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_account_manager" />

        <RadioButton
            android:id="@+id/rbAccountRank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_account_rank" />
    </com.app.client.investment.views.TabRadioGroup>
    


        <FrameLayout
            android:id="@+id/contentArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include 
		        layout="@layout/layout_right_menu1" />

</android.support.v4.widget.DrawerLayout>